@@ -8,22 +8,46 @@
   <url>http://maven.apache.org</url>
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
+
+            <!-- JaCoCo plugin تبعك يظل زي ما هو -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.11</version>
                 <configuration>
-                    <useModulePath>false</useModulePath>
+
+                    <excludes>
+                        <!-- Ignore all JavaFX controllers -->
+                        <exclude>org/Code/G*</exclude>
+                        <exclude>org/Code/LoginControlGUI*</exclude>
+                    </excludes>
+
+
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -36,6 +60,7 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+
 
 
         <dependency>
@@ -65,6 +90,13 @@
         </dependency>
 
     </dependencies>
+
+    <properties>
+        <!-- SonarCloud settings -->
+        <sonar.projectKey>YOUR_PROJECT_KEY</sonar.projectKey>
+        <sonar.organization>YOUR_ORG_KEY</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 
 
 </project>
